# InkscapeAndroid

./: .gitignore  CONTRIBUTING.md  README.md  sources.candidates.toml  sources.lock.toml
.github/workflows/: input-probe-build.yml  pre-engineering.yml  scaffold-check.yml  source-candidates.yml  upstream-contract-audit.yml
LICENSES/: README.md
android/host/: README.md
android/input-probe/: README.md  USAGE.md  gradle.properties  settings.gradle.kts
android/input-probe/app/: build.gradle.kts
android/input-probe/app/src/main/: AndroidManifest.xml
android/input-probe/app/src/main/java/io/github/lightchainr/inkscapeandroid/inputprobe/: AsyncJsonlWriter.java  (+3 more)
android/interaction-lab/: README.md
core/tablet-input/: CMakeLists.txt  README.md
core/tablet-input/include/inkscape_android/: tablet_input_core.hpp
core/tablet-input/src/: tablet_input_core.cpp
core/tablet-input/tests/: tablet_input_core_test.cpp
docs/: architecture.md  build-macos.md  migration-plan.zh-CN.md  open-source-reference-assessment.zh-CN.md  p1-device-test-protocol.md  pre-engineering-assessment.md  stage-gates.md
patches/gtk/: README.md
patches/inkscape/: README.md
schemas/: input-probe-v1.schema.json
scripts/: audit-upstream-contracts.py  bootstrap-macos.sh  check-inkscape-cross-preconditions.py  dev  doctor-macos.sh  materialize-source-candidates.py  verify-source-candidates.py
tests/input-fixtures/: p1-session-notes-template.csv
tests/input-policy/: README.md
tests/svg/: README.md
tools/: analyze_input_probe.py
tools/tests/: test_analyze_input_probe.py
(+1 files in other folders)
